# NeuroStatX

./: .coveragerc  .gitignore  .pep8speaks.yml  Dockerfile  LICENSE  README.md  codecov.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build-dev.yml  codeql.yml  deploy.yml  docker-deploy.yml
CCPM/: version.py
CCPM/cli/: AddNodesAttributes.py  ApplyModel.py  AverageWeightedPath.py  CompareClustering.py  CompareGraphs.py  ComputeGraphNetwork.py  ConfirmatoryFA.py  ExploratoryFA.py  FactorAnalysis.py  FuzzyClustering.py  GraphMetrics.py  LogisticRegression.py  PartialLeastSquareRegression.py  Plsr.py  PredictFuzzyMembership.py  VisualizeGraphNetwork.py  __init__.py
CCPM/clustering/: cluster.py  distance.py  fuzzy.py  metrics.py  viz.py
CCPM/clustering/tests/: test_clustering_metrics.py
CCPM/io/: download.py  utils.py  viz.py
CCPM/network/: metrics.py  utils.py  viz.py
CCPM/statistics/: harmonization.py  models.py  plsr.py  utils.py
CCPM/tests/: test_applymodel.py  test_compare_clustering.py  test_compare_graphs.py  test_compute_graph_network.py  test_compute_weighted_path.py  test_confirmatoryfa.py  test_exploratoryfa.py  test_factor.py  test_fuzzy.py  test_fuzzy_clustering.py  test_graph_metrics.py  test_harmonization.py  test_logistic_regression.py  test_nodes_attributes.py  test_partial_least_square.py  test_plsr.py  test_plsr_cli.py  test_predict_fuzzy_membership.py  test_preprocessing.py  test_statistics_utils.py  test_utils.py  test_visualize_graph.py  test_viz.py
CCPM/utils/: factor.py  preprocessing.py
CCPM/utils/tests/: test_factor.py  test_preprocessing.py
Scripts/: CCPM_compare_clustering.py  CCPM_compare_graphs.py  CCPM_compute_graph_network.py  CCPM_compute_weighted_path.py  CCPM_creating_medical_statistics.py  CCPM_factor_analysis.py  CCPM_filtering_dataset.py  CCPM_fuzzy_clustering.py  CCPM_graph_metrics.py  CCPM_plsr.py  CCPM_predict_fuzzy_membership.py  CCPM_set_nodes_attributes.py  FactorAnalysis.py
Scripts/tests/: test_compare_clustering.py  test_compare_graphs.py  test_compute_graph_network.py  test_compute_weighted_path.py  test_creating_medical_statistics.py  test_factor_analysis.py  test_filtering_dataset.py  test_fuzzy_clustering.py  test_graph_metrics.py  test_nodes_attributes.py  test_plsr.py  test_predict_fuzzy_membership.py  test_set_nodes_attributes.py
data/: GagnonA_2025_centroids.xlsx  GagnonA_2025_pca.pkl  example.csv
docs/: add_frontmatter.py  index.md  organize_files.sh
docs/api/: conf.py  index.rst  neurostatx.cli.AddNodesAttributes.rst  neurostatx.cli.ApplyModel.rst  neurostatx.cli.AverageWeightedPath.rst  neurostatx.cli.CompareClustering.rst  neurostatx.cli.CompareGraphs.rst  neurostatx.cli.ComputeGraphNetwork.rst  neurostatx.cli.ConfirmatoryFA.rst  neurostatx.cli.ExploratoryFA.rst  neurostatx.cli.FuzzyClustering.rst  neurostatx.cli.GraphMetrics.rst  neurostatx.cli.LogisticRegression.rst  neurostatx.cli.PartialLeastSquareRegression.rst  neurostatx.cli.PredictFuzzyMembership.rst  neurostatx.cli.VisualizeGraphNetwork.rst  neurostatx.cli.rst  neurostatx.clustering.fuzzy.rst  neurostatx.clustering.metrics.rst  neurostatx.clustering.rst  neurostatx.clustering.viz.rst  neurostatx.io.loader.rst  neurostatx.io.utils.rst  neurostatx.io.viz.rst  neurostatx.network.metrics.rst  neurostatx.network.rst  neurostatx.network.utils.rst  neurostatx.network.viz.rst  neurostatx.rst  neurostatx.statistics.harmonization.rst  neurostatx.statistics.models.rst  neurostatx.statistics.rst  neurostatx.statistics.utils.rst  neurostatx.utils.factor.rst  neurostatx.utils.preprocessing.rst  neurostatx.utils.rst
docs/starlight/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
docs/starlight/public/: site.webmanifest
docs/starlight/src/components/: CommandOutputs.astro
docs/starlight/src/content/: config.ts
docs/starlight/src/content/docs/: 404.mdx  index.mdx
docs/starlight/src/content/docs/Getting Started/: citing.mdx  installation.mdx
docs/starlight/src/content/docs/Tutorials/: fuzzyclustering.mdx  intro.mdx
docs/starlight/src/content/docs/getting-started/: citing.mdx  installation.mdx
docs/starlight/src/fonts/: font-face.css
docs/starlight/src/layouts/: Layout.astro
docs/starlight/src/styles/: custom.css
neurostatx/cli/: AddNodesAttributes.py  ApplyModel.py  AverageWeightedPath.py  CompareClustering.py  CompareGraphs.py  ComputeGraphNetwork.py  ConfirmatoryFA.py  ExploratoryFA.py  FuzzyClustering.py  GraphMetrics.py  LogisticRegression.py  PartialLeastSquareRegression.py  PredictFuzzyMembership.py  VisualizeGraphNetwork.py  __init__.py
neurostatx/clustering/: distance.py  fuzzy.py  metrics.py  viz.py
neurostatx/io/: download.py  loader.py  utils.py  viz.py
neurostatx/network/: metrics.py  utils.py  viz.py
neurostatx/statistics/: harmonization.py  models.py  utils.py
neurostatx/tests/: test_add_nodes_attributes.py  test_applymodel.py  test_clustering_metrics.py  test_compare_clustering.py  test_compare_graphs.py  test_compute_graph_network.py  test_compute_weighted_path.py  test_confirmatoryfa.py  test_exploratoryfa.py  test_factor.py  test_fuzzy.py  test_fuzzy_clustering.py  test_fuzzylabelers.py  test_graph_metrics.py  test_harmonization.py  test_loaders.py  test_logistic_regression.py  test_partial_least_square.py  test_plsr.py  test_predict_fuzzy_membership.py  test_preprocessing.py  test_statistics_models.py  test_statistics_utils.py  test_utils.py  test_visualize_graph.py  test_viz.py
neurostatx/utils/: factor.py  preprocessing.py
