[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.1"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry]
name = "CCPM"
version = "0.0.0-post.263+4cc60ed"
description = "Children Cognitive Profiles Mapping Toolbox (CCPM)"
authors = ["Anthony Gagnon <anthony.gagnon7@usherbrooke.ca>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gagnonanthony/CCPM.git"
packages = [
    { include = "CCPM" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
scikit-fuzzy = "^0.4.2"
scipy = "1.11.4"
semopy = "^2.3.10"
graphviz = "^0.20.1"
p-tqdm = "^1.4.0"
seaborn = "0.12.2"
gdown = "5.1.0"
kneed = "^0.8.5"
detect-delimiter = "^0.1.1"
Pillow = "^10.2.0"
factor-analyzer = "^0.5.0"
matplotlib = "^3.8.2"
networkx = "^3.2.1"
coloredlogs = "^15.0.1"
statannotations = {git = "https://github.com/gagnonanthony/statannotations.git"}
adjusttext = "^1.0.4"
strenum = "^0.4.15"
cyclopts = "^2.2.0"
openpyxl = "^3.1.2"
inmoose = "^0.3.1"

[tool.poetry.scripts]
ComputeGraphNetwork = 'CCPM.cli.ComputeGraphNetwork:app'
CompareClustering = 'CCPM.cli.CompareClustering:app' 
CompareGraphs = 'CCPM.cli.CompareGraphs:app'
AverageWeightedPath = 'CCPM.cli.AverageWeightedPath:app'
FactorAnalysis = 'CCPM.cli.FactorAnalysis:app'
FuzzyClustering = 'CCPM.cli.FuzzyClustering:app'
GraphMetrics = 'CCPM.cli.GraphMetrics:app'
PredictFuzzyMembership = 'CCPM.cli.PredictFuzzyMembership:app'
AddNodesAttributes = 'CCPM.cli.AddNodesAttributes:app'
Plsr = 'CCPM.cli.Plsr:app'
VisualizeGraphNetwork = 'CCPM.cli.VisualizeGraphNetwork:app'

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
ipykernel = "^6.27.1"
pytest-console-scripts = "^1.4.1"

[tool.poetry.group.debug]
optional = true

[tool.poetry.group.debug.dependencies]
ipdb = ">=0.13.9"
line_profiler = ">=3.5.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = {extras = ["imaging"], version = "^9.5.9"}
mkdocs-git-revision-date-localized-plugin = "^1.2.4"
mkapi = "^2.1.0"
config = "^0.5.1"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
