[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.4.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "semver"

[tool.poetry]
name = "NeuroStatX"
version = "0.0.0-post.365+2d4bba9"
description = "Command-line toolbox to perform various statistical analysis on neuroscience data."
authors = ["Anthony Gagnon <anthony.gagnon7@usherbrooke.ca>"]
documentation = "https://gagnonanthony.github.io/NeuroStatX/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gagnonanthony/NeuroStatX.git"
packages = [
    { include = "neurostatx" }
]

[tool.poetry.dependencies]
python = ">= 3.10, < 3.12"
numpy = "^1.26.2"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
scikit-fuzzy = "^0.4.2"
scipy = "1.11.4"
semopy = "^2.3.10"
graphviz = "^0.20.1"
p-tqdm = "^1.4.0"
seaborn = "^0.13.0"
gdown = "5.1.0"
kneed = "^0.8.5"
detect-delimiter = "^0.1.1"
Pillow = "^10.3.0"
factor-analyzer = "^0.5.0"
matplotlib = "^3.8.2"
networkx = "^3.2.1"
coloredlogs = "^15.0.1"
strenum = "^0.4.15"
cyclopts = "^2.2.0"
openpyxl = "^3.1.2"
setuptools = "^70.0.0"
ipykernel = "^6.29.5"
pip = "^24.1.2"

[tool.poetry.scripts]
ApplyModel = 'neurostatx.cli.ApplyModel:app'
ComputeGraphNetwork = 'neurostatx.cli.ComputeGraphNetwork:app'
CompareClustering = 'neurostatx.cli.CompareClustering:app' 
CompareGraphs = 'neurostatx.cli.CompareGraphs:app'
ConfirmatoryFA = 'neurostatx.cli.ConfirmatoryFA:app'
AverageWeightedPath = 'neurostatx.cli.AverageWeightedPath:app'
ExploratoryFA = 'neurostatx.cli.ExploratoryFA:app'
FuzzyClustering = 'neurostatx.cli.FuzzyClustering:app'
GraphMetrics = 'neurostatx.cli.GraphMetrics:app'
PredictFuzzyMembership = 'neurostatx.cli.PredictFuzzyMembership:app'
AddNodesAttributes = 'neurostatx.cli.AddNodesAttributes:app'
PartialLeastSquareRegression = 'neurostatx.cli.PartialLeastSquareRegression:app'
VisualizeGraphNetwork = 'neurostatx.cli.VisualizeGraphNetwork:app'
LogisticRegression = 'neurostatx.cli.LogisticRegression:app'

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
ipykernel = "^6.27.1"
pytest-console-scripts = "^1.4.1"

[tool.poetry.group.debug]
optional = true

[tool.poetry.group.debug.dependencies]
ipdb = ">=0.13.9"
line_profiler = ">=3.5.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0.2"
sphinx-markdown-builder = "^0.6.6"
sphinx-autodoc-typehints = "^2.2.3"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
